remove core.async chan -> deferred coercion for now, and make everything Java 8 friendly